--- a/src/theme/SearchBar.module.css
+++ b/src/theme/SearchBar.module.css
@@ -8,6 +8,7 @@
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   height: 100%;
+  vertical-align: middle;
   background-color: #fff;
   color: #7f88a5;
   border: none;
@@ -18,7 +19,8 @@
 
 .button {
   height: 100%;
-  font-family: "Open Sans", sans-serif;
+  vertical-align: middle;
+  font-family: 'Open Sans', sans-serif;
   font-size: 11px;
   font-weight: 700;
   color: #fff;
